Fix flipcard display bug on tablet and create name wrapper divs on front

--- a/static/css/prideColors.css
+++ b/static/css/prideColors.css
@@ -4,13 +4,15 @@
   
   .rolling-pride{
       width: 100%;
-      height: 700px;
+      height: calc(100vh - 70px);
       margin: 50 auto;
       -webkit-animation: color_change 1.5s infinite ease-in-out;
       -moz-animation: color_change 1.5s infinite ease-in-out;
       -ms-animation: color_change 1.5s infinite ease-in-out;
       -o-animation: color_change 1.5s infinite ease-in-out;
       animation: color_change 1.5s infinite ease-in-out;
+      position: relative;
+      top: 70px;
   }
   
   @-webkit-keyframes color_change {
